# hazmath

./: .gitattributes  .gitignore  CMakeLists.txt  HAZMAT.files  HAZMATH_MESH_RW.md  LICENSE  LICENSE.txt  README  README.md  _config.yml  index.md  makefile  makefile_sample  mkheaders.awk
examples/: CMakeLists.txt  HDEquation.c  README  examples.mk  make_all_examples.sh  test.c
examples/ConvectionDiffusion/: .gitignore  ConvectionDiffusion.c  ConvectionDiffusion.h  eafe.c  makefile  multigraph_solve.c  multigraph_solve.h  nonsymm.coo.REMOVED.git-id
examples/DarcyFlow/: DarcyData.h  DarcyFlow.c  DarcySystem.h  Darcy_assemble.h  Darcy_functions.h  makefile
examples/EG_Biot/: elasticity_error.h  elasticity_system.h  makefile  read_matrix.m
examples/EG_Stokes/: 2dSQD1-0.vtu  eg_stokes.c  eg_stokes_params.h  elasticity.c  elasticity_error.h  matrix.txt  output.txt  read_matrix.m
examples/Gridding/: features.c  graph0.m  graph1.m  grid_defs.h  grid_params.h  makefile
examples/HDEquation/: HDEquation.c  makefile
examples/HeatEquation/: HeatEqn.c  HeatEquation.c  makefile  solution_ts000.vtu  solution_ts001.vtu  solution_ts002.vtu  solution_ts003.vtu  solution_ts004.vtu  solution_ts005.vtu  solution_ts006.vtu  solution_ts007.vtu  solution_ts008.vtu  solution_ts009.vtu  solution_ts010.vtu  true_solution_ts001.vtu  true_solution_ts002.vtu  true_solution_ts003.vtu  true_solution_ts004.vtu  true_solution_ts005.vtu  true_solution_ts006.vtu  true_solution_ts007.vtu  true_solution_ts008.vtu  true_solution_ts009.vtu  true_solution_ts010.vtu
examples/Helmholtz/: helmholtz.c  makefile
examples/Maxwell/: Maxwell.c  Maxwell_assemble.h  Maxwell_data.h  makefile
examples/ReactionDiffusion/: ReactionDiffusion.c  ReactionDiffusionData.h  energynorm.h
examples/SignalsGraphs/: .gitignore  README  algorithm.cpp  eig_call_fortran.cpp  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  graph.cpp  graph.hpp  makefile
examples/Solve_Multigraph/: README  m000.c  makefile  multigraph_solve.c  multigraph_solve.h  symm.coo  symm.coo.REMOVED.git-id
examples/Solve_lin_sys/: README  gen_lin_solve.c  mgraph.c
examples/Stokes/: Stokes.c  StokesData.h  StokesSystem.h  makefile
examples/amg_classical/: README.md  amg_helping.h  amg_wrapper.c  makefile  test_amg.c  test_ilu_ichol.c
examples/amr/: 2d_L.input  2d_square.input  3d_cube.input  3d_fichera.input  makefile  solve_estimate_mark.h
examples/amr_grids/: 2d_L.input  2d_meniscus.input  2d_square.input  3d_cube.input  3d_fichera.input  README  README.grid_input  README.md  amr_grids.c  connected_components.h  graph_in_3d.c  grid_hole.input  makefile  new_amr_grids.c  solve_estimate_mark.h  supporting_amr_grids.h  test_bndry_codes.c  test_dgs_adaptive.c  test_msh_roundtrip.c  triangulation2d.c  try_features.txt  try_seg.txt  view_dgs_adaptive.py
examples/approximation/: README.md  aaa.c  aaa_example.h  frac_brasil.m  makefile  ra_examples.h  test_aaa.c  test_brasil.c
examples/basic_elliptic/: basic_elliptic.c  basic_elliptic_data.h  basic_elliptic_supporting.h  makefile  supporting_basic_elliptic.h
examples/darcy/: darcy.c  darcy_data.h  darcy_system.h  makefile
examples/eg_biot/: 2dSQD1-1.haz  2dSQD1-1.vtu  2dSQD1-2.vtu  eg_biot.c  eg_biot_params.h  elasticity.c  makefile
examples/eg_stokes/: 2dSQD1-0.haz  2dSQD1-4.vtu  eg_stokes.c  eg_stokes_error.h  eg_stokes_params.h  eg_stokes_precond.h  eg_stokes_system.h  makefile
examples/eg_stokes2D/: 2dSQD1-3.vtu  2dSQD1-4.haz  2dSQD1-5.vtu  eg_stokes.c  makefile
examples/eg_stokes_SIPG/: eg_stokes_error.h  eg_stokes_params.h  eg_stokes_precond.h  eg_stokes_system.h  movetohazmath.h  mymakefile  solution_n17.vtu  usol_vfield_n17.mat
examples/eigen/: eigsymm.c  generalized.c  makefile
examples/elasticity/: compile_test.sh  elasticity.c  elasticity_data.h  elasticity_error.h  elasticity_params.h  elasticity_precond.h  elasticity_system.h  faces.c  makefile
examples/elliptic_p1/: elliptic_p1.c  elliptic_p1_supporting.h  functions_elliptic_p1.h  makefile  meshes_inline.h  stereo_g.h  supporting_elliptic_p1.h
examples/fractures/: haz_solve.c  makefile  matrix.ijv
examples/grids/: 2d_SQ+L.input  2d_ann.input  2d_grid.input  2d_square.input  3d_fichera.input  README.grid_input  example2d_ann.input  example2d_polar.input  example2dpolar_grid.input  example3d_2cubes.input  example3d_grid.input  grid_generate.c  makefile
examples/grids_and_amr/: 3d_cube.input  README.grid_input  makefile
examples/haznics/: HAZniCS_GUI_help.txt  README.md  TODO  demo_darcy_stokes.py  demo_metric_multigrid.py  demo_mixed_poisson.py  demo_poisson.py  demo_ra.py  demo_sumfractional.py  haznics_install.tcl  hodge_Hcurl_3d.py  install_haznics.sh  mixedpoisson.py  mixedpoisson_Hdiv_3d.py  poisson.py  precond_haz.py  quick_test.py  set_the_path.py  setup.rc  stokes_flat.py  stokes_mixed.py  test_blockmat.py  test_haznics.py  test_params.py  test_poisson.py
examples/heat_equation/: heat_equation.c  heat_equation_data.h  makefile
examples/lc_frankoseen/: lc_data.h  lc_system.h  lcelastic.c  makefile
examples/mg_geometric/: README  gmg.c  gmg_routines.h  makefile  out_level_11.txt  rhs_bc.h  sample.input
examples/multigraph_wrap/: multigraph_solve.c
examples/navierstokes/: makefile  navierstokes.c  ns_data.h  ns_system.h
examples/reaction_diffusion/: ReactionDiffusionSystem.h  makefile  rd_data.h  rd_system.h  reaction_diffusion.c
examples/runs/: testmat.m
examples/solver/: Solver.c  makefile
examples/solvers/: b_coarse.txt  b_fine.txt  dfs0.m  makefile  run_dfs.m  runit.sh  solvers.c  solvers_bdcsr.c  solvers_block.c  solvers_bsr.c  solvers_frac.c  solvers_frac_help.h  solvers_read.h  test_Schwarz.c  vector_laplace_coarse.txt
examples/stokes/: makefile  stokes.c  stokes_data.h  stokes_precond.h  stokes_system.h
examples/symmgrad/: makefile  problem_data.h  symmgrad.c  variational_system.h
examples/with_multigraph/: multigraph_solve.h
examples/xd_1d_models/: README.md  compile_main.sh  definitions_xd_1d.h  libxd_1d_.c  main_meshing_xd_1d.c  main_solver_xd_1d.c  main_xd_1d.c  makefile  run_xd_1d.py  (+7 more)
(+1000 files in other folders)
